--- a/src/componentes/TareaItem.css
+++ b/src/componentes/TareaItem.css
@@ -7,5 +7,6 @@
     background-color: red;
     color: white;
     border-radius: 5px;
-    box-shadow: 20px 10px 5px;
+    box-shadow: 8px 8px rgb(67, 58, 58);
+
 }
